2009-01-06  Dan Fandrich <dan@coneharvesters.com>

	* libexif/exif-tags.c: Added remaining GPS tags from the EXIF 2.2
	  spec to the tag table.

2009-01-03  Dan Fandrich <dan@coneharvesters.com>

	* contrib/examples/photographer.c: Added example program to show how
	  to display EXIF and MakerNote tags

2008-12-22  Dan Fandrich <dan@coneharvesters.com>

	* po/vi.po: Updated Vietnamese translation by Clytie Siddall
        * Fixed bug #1946138 to stop ignoring CFLAGS in the sqrt configure test

2008-11-25  Dan Fandrich <dan@coneharvesters.com>

	* po/sk.po: Updated Slovak translation by Ivan Masár

2008-11-22  Dan Fandrich <dan@coneharvesters.com>

	* Added Doxygen comments for the main API entry points and data
	  structures

2008-11-18  Dan Fandrich <dan@coneharvesters.com>

	* libexif/exif-entry.c & configure.ac: use localtime_r when available
	  to make libexif thread safe
	* po/nl.po: Updated Dutch translation by Erwin Poeze
	* po/pl.po: Updated Polish translation by Jakub Bogusz
	* contrib/examples/*: Added a couple of simple example programs
	  to show how to use libexif. One was written by Naysawn Naderi
	  and the other one I wrote. Closes bug #1246824.

2008-11-06  Dan Fandrich <dan@coneharvesters.com>

	* Released 0.6.17

2008-11-05  Dan Fandrich <dan@coneharvesters.com>

	* aolserver/*: moved to contrib/aolserver/
	* README: updated
	* po/de.po: Updated German translation by Marcus Meissner
	* Added contrib/watcom/ directory to the source tarball now that
	  Jan Patera brought it up-to-date.
	* libexif.spec.in: changed default release number to 1; added NEWS,
	  AUTHORS and COPYING files to package; moved libexif.so file to -devel
	  package; corrected license to LGPL

2008-10-20  Jan Patera <patera@users.sourceforge.net>

	* libexif/pentax/mnote-pentax-tag.c & olympus/mnote-olympus-tag.c:
	  Don't crash in mnote_XX_tag_get_description on unknown tags

2008-10-04  Jan Patera <patera@users.sourceforge.net>
