@@ -735,6 +735,7 @@ exif_data_get_type_maker_note (ExifData *d)
 	if ((e->size >= 8) && ( !memcmp (e->data, "OLYMP", 6) ||
 				!memcmp (e->data, "OLYMPUS", 8) ||
 				!memcmp (e->data, "SANYO", 6) ||
+				!memcmp (e->data, "EPSON", 6) ||
 				!memcmp (e->data, "Nikon", 6)))
 		return EXIF_DATA_TYPE_MAKER_NOTE_OLYMPUS;
 
