@@ -179,6 +179,11 @@ enum _MnoteOlympusTag {
 	MNOTE_SANYO_TAG_SCENESELECT		= 0x021f,
 	MNOTE_SANYO_TAG_MANUALFOCUSDISTANCE	= 0x0223,
 	MNOTE_SANYO_TAG_SEQUENCESHOTINTERVAL	= 0x0224,
+
+	/* Epson */
+	MNOTE_EPSON_TAG_IMAGE_WIDTH		= 0x020b,
+	MNOTE_EPSON_TAG_IMAGE_HEIGHT		= 0x020c,
+	MNOTE_EPSON_TAG_OEM_MODEL		= 0x020d,
 };
 typedef enum _MnoteOlympusTag MnoteOlympusTag;
 
